tests/__snapshots__/config-legacyToBe-enabled-stderr.snap.txt
Error: Type '{ a: string; } & { b: number; }' is not the same as type '{ a: string; b: number; }'.

  1 | import { expect } from "tstyche";
  2 | 
  3 | expect<{ a: string } & { b: number }>().type.toBe<{ a: string; b: number }>();
    |                                                   ~~~~~~~~~~~~~~~~~~~~~~~~
  4 | 

      at ./__typetests__/isLegacyToBe.test.ts:3:51

